# backend_sceleton

./: .cursorignore  .gitignore  DEPLOY_INSTRUCTIONS.md  README.md  pyrightconfig.json
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  env.dev  env.example  env.prod.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_tenants.py  002_create_locales.py  003_create_auth.py  004_create_company.py  005_create_content.py  006_create_leads.py  007_create_seo.py  008_create_assets.py  009_create_cases.py  010_create_reviews.py  011_create_documents.py  012_create_telegram_integrations.py  013_add_service_prices_and_tags.py  014_add_cancelled_status_to_inquiries.py  015_add_case_review_contacts.py  016_add_content_blocks.py  017_add_tenant_seo_settings.py  018_expand_ym_counter_id_to_text.py  019_add_tenant_site_url.py  020_add_employee_to_content_blocks.py  021_add_force_password_change.py  022_add_services_module_feature_flag.py  023_add_tenant_email_smtp_settings.py  024_create_tenant_domains.py  025_add_domain_provisioning_fields.py  025_add_webmaster_verification.py  026_fix_user_email_unique_soft_delete.py  027_add_domain_provisioning_fields.py  028_create_uoms.py  029_create_categories.py  030_create_products.py  031_create_parameters.py  032_add_catalog_features.py  033_add_product_id_to_inquiries.py  034_add_product_to_content_blocks.py  035_faceted_filtering.py  036_product_variants.py  037_refactoring_phase3.py  038_billing_system.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: __init__.py  audit.py  base_model.py  base_service.py  cache.py  database.py  dependencies.py  encryption.py  exceptions.py  image_upload.py  locale_helpers.py  logging.py  pagination.py  redis.py  schemas.py  security.py  tenant.py  url_utils.py
backend/app/middleware/: __init__.py  cache.py  cors.py  feature_check.py  rate_limit.py  request_logging.py  security_headers.py
backend/app/scripts/: __init__.py  add_dashboard_permission.py  cleanup_all_duplicates.py  cleanup_duplicate_topics.py  init_admin.py  (+4 more)
backend/nginx/: nginx-initial.conf  nginx.conf.template
backend/scripts/: CHECK_PARAMETERS_QUICK.md  DIAGNOSE_EMPTY_PARAMETERS.md  backup.sh  check_media.py  check_parameters_db.sh  deploy.sh  init-ssl.sh
backend/tests/: __init__.py  conftest.py  helpers.py  test_admin_api.py  test_auth.py  test_catalog_filters.py  test_health.py  test_public_api.py  test_variants.py
(+309 files in other folders)
